--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>UX Designer: Gulbahar Okuyan-Waugh</title>
+        <link rel="stylesheet" type="text/css" href="styles/normalize.css">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/about.css">
         <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="styles/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500|Rozha+One" rel="stylesheet">
         <script src="javascript/script.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -43,18 +43,20 @@
                 <div id="container">
                     <div class="about-text">
                         <h2>“Just because something works doesn’t mean it can’t be improved.”</h2>
-                        <p>I am a freelance UX designer with 8 years’ experience in strategy and project development.
-
-                        <p>My specialty is in identifying the big picture and working downwards.
-                          I thrive in team environments, working with diverse people in a community
-                          to address and overcome boundaries.
-
-                        <p>It’s the potential of design and its ability to make things practical,
-                           usable, and beautiful that drives me.
-
-                        <p>I enjoy traveling and meeting people. Most recently, I was in
-                          rural Philippines interviewing women entrepreneurs to better
-                          understand how financial technology could impact their day-to-day.</p>
+                        <div class="text">
+                            <p>I am a freelance UX designer with 8 years’ experience in strategy and project development.
+                            <p>
+                            <br>My specialty is in identifying the big picture and working downwards.
+                              I thrive in team environments, working with diverse people in a community
+                              to address and overcome boundaries.
+                            <p>
+                            <br>It’s the potential of design and its ability to make things practical,
+                               usable, and beautiful that drives me.
+                            <p>
+                            <br>I enjoy traveling and meeting people. Most recently, I was in
+                              rural Philippines interviewing women entrepreneurs to better
+                              understand how financial technology could impact their day-to-day.</p>
+                        </div>
                         <div class="buttons">
                               <a href="#"><button>download resume</button></a>
                               <a href="mailto:gokuyan@gmail.com"><button>email me</button></a>
