--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>UX Designer: Gulbahar Okuyan-Waugh</title>
+      <link rel="stylesheet" type="text/css" href="styles/normalize.css">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <link rel="stylesheet" type="text/css" href="styles/landing.css">
       <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-      <link rel="stylesheet" type="text/css" href="styles/normalize.css">
       <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500|Rozha+One" rel="stylesheet">
       <script src="javascript/script.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -26,6 +26,7 @@
                   <a href="index.html" class="logo">
                       <img src="images/spring.png" alt="gulbahar okuyan logo">
                   </a>-->
+
                   <ul class="nav-bar" id="topnav">
                       <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                           <i class="fa fa-bars"></i>
@@ -36,13 +37,14 @@
                       <li><a data scroll href="#contact">contact</a></li>
                       </a>
                   </ul>
+                  <div class="clearfix"></div>
                 <!--  <a href="img.html">images </a>-->
               </nav>
               <section class="hero">
                   <div id="container">
                       <h1>hi, i’m Gulbahar Okuyan-Waugh, a freelance ux designer</h1>
-                      <p>You can call me "G" for short and "Rose" for a translation.
-                      <br>Living in Milan, Made in NY.
+                      <p class="text">You can call me "G" for short and "Rose" for a translation.
+                      <br>Living in Milan, Made in NY.</p>
                         <div class="buttons">
                             <a data scroll href="#projects"><button>view select projects</button></a>
                             <a href="about.html"><button>about me</button></a>
@@ -60,11 +62,12 @@
                         </a>
                           <div class="clearfix"></div>
                           <div class="text">
+                                <p></p>
                                 <h3>refated Shoes</h3>
                                 <p>Hand-dyeing shoes to create a unique twist, this entrepreneur needed
                                   help taking his company to the next level.</p>
-                                <a href="rfs.html"><button>see case study</button></a>
                           </div>
+                          <a href="rfs.html"><button>see case study</button></a>
                           <div class="clearfix"></div>
                       </div>
                   </div>
@@ -75,11 +78,12 @@
                           </a>
                           <div class="clearfix"></div>
                           <div class="text">
+                                <p></p>
                                 <h3>COOP</h3>
                                 <p>A platform that makes it easy to share, store, and collaborate
                                    needed help rebranding for a new audience.</p>
-                                   <a href="coop.html"><button>see case study</button></a>
                           </div>
+                          <a href="coop.html"><button>see case study</button></a>
                           <div class="clearfix"></div>
                       </div>
                   </div>
@@ -92,6 +96,7 @@
                   <div class="contact-text">
                       <h2>If you’d like to get in touch to work or just chat about
                         all things design & milan</h2>
+                        <p></p>
                       <a href="mailto:gokuyan@gmail.com"><button>email me</button></a>
                   </div>
               </div>
