changed the case study layout - header and intro

--- a/about.html
+++ b/about.html
@@ -45,15 +45,12 @@
                         <h2>“Just because something works doesn’t mean it can’t be improved.”</h2>
                         <div class="text">
                             <p>I am a freelance UX designer with 8 years’ experience in strategy and project development.
-                            <p>
-                            <br>My specialty is in identifying the big picture and working downwards.
+                            <p>My specialty is in identifying the big picture and working downwards.
                               I thrive in team environments, working with diverse people in a community
                               to address and overcome boundaries.
-                            <p>
-                            <br>It’s the potential of design and its ability to make things practical,
+                            <p>It’s the potential of design and its ability to make things practical,
                                usable, and beautiful that drives me.
-                            <p>
-                            <br>I enjoy traveling and meeting people. Most recently, I was in
+                            <p>I enjoy traveling and meeting people. Most recently, I was in
                               rural Philippines interviewing women entrepreneurs to better
                               understand how financial technology could impact their day-to-day.</p>
                         </div>
