--- a/rfs.html
+++ b/rfs.html
@@ -25,10 +25,11 @@
 
   <body class="case-study">
       <header>
-          <nav><!--
+          <nav>
               <a href="index.html" class="logo">
-                  <img src="images/spring.png" alt="gulbahar okuyan logo">
-              </a>-->
+                <!--<img src="images/spring.png" alt="gulbahar okuyan logo">-->
+                <button>go waugh</button>
+              </a>
               <ul class="nav-bar" id="topnav">
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i>
@@ -41,38 +42,49 @@
           </nav>
           <section class="hero">
               <div class="case-hero">
-                  <img src="images/rfs-laptop.png">
+                  <div class="first">
+                      <h1>refated shoes</h1>
+                      <p>Branding   |   Strategy   |   UX & UI</p>
+                      <a href="https://projects.invisionapp.com/share/E5E270F8X#/screens"><button class="case-study-button">view prototype</button></a>
+                  </div>
+                  <img src="images/rfs-laptop.png" class="second">
+                  <div class="clearfix"></div>
               </div>
           </section>
       </header>
       <main>
           <section class="introduction">
               <div id="container">
-                  <h1>refated shoes</h1>
-                  <div class="text">
-                      <p>The entrepreneur (Darcy) behind ReFated Shoes, or RF, is an artist with
-                        impeccable style. Bored of the basic blacks and browns, he hand-painted his
-                        own shoes in vibrant hues, patina patterns, and however else inspiration took
-                        hold of his paint brush. To his surprise, colleagues and passersby were offering
-                        to buy the shoes off his feet. So, he decided to take his hobby online.
-                      <p>After a successful stint on Etsy, the entrepreneur decided that it was time to
-                        host his own site and define his brand.
-                      <p>My role was to help him with strategy, marketing, and design.</p>
+                  <div class="two-thirds">
+                      <h2>the story</h2>
+                      <p>The entrepreneur (Darcy) behind ReFated Shoes, or RFS, is an artist with
+                            impeccable style. Bored of the basic blacks and browns, he hand-painted his
+                            own shoes in vibrant hues, patina patterns, and however else inspiration took
+                            hold of his paint brush. To his surprise, colleagues and passersby were offering
+                            to buy the shoes off his feet. So, he decided to take his hobby online. After
+                            a successful stint on Etsy, he wanted to make it official with his own site.
+                      <p>With our foundation as an Etsy site, design-wise, we were starting from scratch.
+                            Below, I outline how we went from this Etsy site to what we have now.</p>
                   </div>
-                  <a href="https://projects.invisionapp.com/share/E5E270F8X#/screens"><button class="case-study-button">view prototype</button></a>
+                  <ul class="one-third">
+                        <li><img src="images/etsy.png"></li>
+                        <li><img src="images/arrow-black.png" id="rotate"></li>
+                        <li><img src="images/rfs-etsy.png"></li>
+                  </ul>
+                  <div class="clearfix"></div>
               </div>
           </section>
-          <section class="intro">
+        <!--  <section class="intro">
               <div id="container">
                   <h2>starting from the sole up</h2>
                   <p>With our foundation as an Etsy site, design-wise, we were starting from scratch.
                   Below, I outline how we went from this Etsy site to what we have now.</p>
                       <img src="images/etsy-rfs.png" class="more-full">
               </div>
-          </section>
+          </section>-->
           <section class="competition">
               <div id="container">
-                  <h3>Who's Out There?</h3>
+                  <h2>Who's Out There?</h2>
                   <p>Darcy named a few companies with a similar concept. So, we looked them over
                   to see if we could idenfity any aesthetic similarities and key differences. We
                   found that the companies that were just starting out use stone/slate textures and colors,
@@ -158,6 +170,7 @@
                               <h2>"used"</h2>
                               <p>most resembled "refurbished"</p>
                             </div>
+                            <div class="clearfix"></div>
                         </div>
                         <div class="clearfix"></div>
                         <p>I conducted another survey to test whether it was the term “refurbished” or the concept
@@ -175,6 +188,7 @@
                                   <li><p>The word "refurbished"</p></li>
                                   <li><p>Ambiguity behind the refurbishing process</p></li>
                               </ul>
+                              <div class="clearfix"></div>
                           </div>
                           <div class="second">
                               <h3>Solutions</h3>
@@ -184,6 +198,7 @@
                                       <li><p>Explain the process</p></li>
                                   </ul>
                           </div>
+                          <div class="clearfix"></div>
                       </div>
                       <div class="clearfix"></div>
               </div>
@@ -225,6 +240,7 @@
           <section class="sketch">
               <div id="container">
                   <h2>translating to web</h2>
+                  <p>
                   <h3>Sketching to Lo-Fi</h3>
                   <div class="sketch-img">
                       <img src="images/rfs-home-sketch.png" class="more-full">
